--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
           width: 100%; /* 设置宽度为页面宽度的100% */
           margin: 0 auto; /* 设置左右边距为自动，实现居中 */
           padding: 10px; /* 设置内边距 */
+          overflow-x: hidden;
         }
                         
         body {
