--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
             margin-bottom: 0%;
             margin-left: 0%;
             margin-right: 0%;
-
+        }
           
         a {
           color: #FFFFFF;
