--- a/style.css
+++ b/style.css
@@ -38,3 +38,7 @@
             margin: 0 auto; /* 水平居中 */
             display: block; /* 去除默认的行内元素样式 */
           }
+
+        .no-wrap {
+          white-space: nowrap;
+        }
